--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Application generated files
+config.json
+# !.vscode/*.json
+# *.csv
+# !.env.example
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,10 +212,3 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
-
-# Application generated files
-*.json
-!.vscode/*.json
-*.csv
-# Keep example templates
-!.env.example
