--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "pytest-cov>=7.0.0",
     "python-dotenv>=1.2.1",
     "sounddevice>=0.5.3",
+    "soundfile>=0.13.1",
     "vosk==0.3.44",
 ]
