--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "appdirs>=1.4.4",
+    "beautifulsoup4>=4.14.2",
+    "ebooklib>=0.20",
     "librosa>=0.11.0",
     "loguru>=0.7.3",
     "numpy>=2.3.4",
