--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "appdirs>=1.4.4",
     "beautifulsoup4>=4.14.2",
     "ebooklib>=0.20",
+    "flask>=3.1.2",
+    "flask-socketio>=5.5.1",
     "librosa>=0.11.0",
     "loguru>=0.7.3",
     "numpy>=2.3.4",
