talk scenario in web

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,8 @@ dependencies = [
     "soundfile>=0.13.1",
     "vosk==0.3.44",
 ]
+
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
