--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ebooklib>=0.20",
     "flask>=3.1.2",
     "flask-socketio>=5.5.1",
+    "gradio>=6.1.0",
     "librosa>=0.11.0",
     "loguru>=0.7.3",
     "numpy>=2.3.4",
